# mailing_list

./: groups.json  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  scheduler.py  services.py  urls.py  utils.py  views.py
mailing/management/commands/: check_and_send_mailings.py  mailing.py  runapscheduler.py  send_mailings.py
mailing/migrations/: 0001_initial.py  0002_alter_mailinglist_options_alter_message_options.py  0002_initial.py  0002_mailing.py  0002_mailing_attempts.py  0003_alter_client_options_alter_mailing_options.py  0003_mailingattempt_mailinglist.py  0003_remove_mailing_attempts.py  0004_alter_mailing_client.py
mailing/templates/: attempt_list.html  base.html  client_confirm_delete.html  client_form.html  client_list.html  main.html  message_confirm_delete.html  message_list.html
mailing/templates/includes/: menu.html
mailing/templates/inlcudes/: menu.html
mailing/templates/mailing/: base.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailinglist_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html  user_profile.html  users_list.html
users/templates/users/: user_form.html  user_update.html
