[tool.poetry]
name = "mailing-list"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
pytils = "^0.4.1"
psycopg2-binary = "^2.9.9"
django-apscheduler = "^0.6.2"
pillow = "^10.4.0"


#python = "^3.12"
#black = "^24.4.2"
#pillow = "^10.3.0"
#ipython = "^8.25.0"
#requests = "^2.32.3"
#psycopg2 = "^2.9.9"
#psycopg2-binary = "^2.9.9"
#pytils = "^0.4.1"
#django = "4.2.2"
#redis = "^5.0.7"
#python-dotenv = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
